--- a/GeneralClashConfig_lohome_meta.yaml
+++ b/GeneralClashConfig_lohome_meta.yaml
@@ -10,7 +10,7 @@ port: 7890
 socks-port: 7891
 redir-port: 7892
 mixed-port: 7893
-tproxy-port: 7894
+tproxy-port: 7895
 allow-lan: true
 bind-address: '*'
 skip-auth-prefixes:
@@ -25,6 +25,7 @@ unified-delay: true
 tcp-concurrent: true
 global-client-fingerprint: chrome
 geodata-loader: standard
+geodata-mode: true
 geo-auto-update: true
 geo-update-interval: 24
 keep-alive-interval: 30
@@ -32,6 +33,7 @@ geox-url:
   geoip: "https://mirror.ghproxy.com/https://github.com/MetaCubeX/meta-rules-dat/releases/download/latest/geoip.dat"
   geosite: "https://mirror.ghproxy.com/https://github.com/MetaCubeX/meta-rules-dat/releases/download/latest/geosite.dat"
   mmdb: "https://mirror.ghproxy.com/https://github.com/MetaCubeX/meta-rules-dat/releases/download/latest/country.mmdb"
+  asn: "https://github.com/xishang0128/geoip/releases/download/latest/GeoLite2-ASN.mmdb"
 tun:
   enable: true
   stack: system # system gvisor mixed
@@ -47,6 +49,7 @@ dns:
   use-system-hosts: true
   ipv6: false
   prefer-h3: true
+  respect-rules: true
   listen: 0.0.0.0:53
   enhanced-mode: fake-ip # fake-ip or redir-host
   fake-ip-range: 28.0.0.1/8
@@ -65,24 +68,31 @@ dns:
     "geosite:cn,tld-cn,category-games@cn,apple-cn,apple,microsoft@cn,onedrive": 
       - https://223.5.5.5/dns-query#h3=true
       - https://1.12.12.12/dns-query
-    "rule-set:google,gfw,proxy,proxyclassical,global":
-      - https://dns.google/dns-query#h3=true&ecs=120.76.0.0/14&ecs-override=true
+    "rule-set:github,google,gfw,proxy,tiktok,openai,proxyclassical,global":
+      - https://dns.google/dns-query#ecs=120.76.0.0/14&ecs-override=true
       - https://dns12.quad9.net/dns-query#ecs=120.76.0.0/14&ecs-override=true
       - https://doh.apad.pro/dns-query#ecs=120.76.0.0/14&ecs-override=true
-    "geosite:github,facebook,twitter,tiktok,openai":
-      - https://dns.google/dns-query#h3=true&ecs=120.76.0.0/14&ecs-override=true
+    "geosite:github,google,facebook,twitter,tiktok,openai":
+      - https://dns.google/dns-query#ecs=120.76.0.0/14&ecs-override=true
       - https://dns12.quad9.net/dns-query#ecs=120.76.0.0/14&ecs-override=true
       - https://doh.apad.pro/dns-query#ecs=120.76.0.0/14&ecs-override=true
   proxy-server-nameserver: 
-      - https://dns.google/dns-query#h3=true&ecs=120.76.0.0/14&ecs-override=true
+      - https://dns.google/dns-query#ecs=120.76.0.0/14&ecs-override=true
       - https://dns12.quad9.net/dns-query#ecs=120.76.0.0/14&ecs-override=true
       - https://doh.apad.pro/dns-query#ecs=120.76.0.0/14&ecs-override=true
   nameserver: 
-    - https://223.5.5.5/dns-query#h3=true&ecs=120.76.0.0/14&ecs-override=true
+    - https://223.5.5.5/dns-query#h3=true
     - https://1.12.12.12/dns-query
+  fake-ip-filter-mode: blacklist
   fake-ip-filter:
     - "WORKGROUP"
-    - "geosite:CN"
+    - "rule-set:direct"
+    - "rule-set:china"
+    - "rule-set:chinax"
+    - "rule-set:chinatest"
+    - "geosite:cn"
+    - "geosite:tld-cn"
+    - "geosite:tracker"
     - "+.apple.com"
     - "+.synology.me"
     - "+.synology.com"
@@ -212,6 +222,8 @@ dns:
 
 sniffer:
   enable: true
+  parse-pure-ip: true
+  force-dns-mapping: true
   sniff:
     HTTP:
       ports: [80, 8080-8880]
