--- a/GeneralClashConfig_lohome_meta_android.yaml
+++ b/GeneralClashConfig_lohome_meta_android.yaml
@@ -10,7 +10,7 @@ port: 7890
 socks-port: 7891
 redir-port: 7892
 mixed-port: 7893
-tproxy-port: 7894
+tproxy-port: 7895
 allow-lan: false
 bind-address: '*'
 skip-auth-prefixes:
@@ -28,6 +28,7 @@ unified-delay: true
 tcp-concurrent: true
 global-client-fingerprint: chrome
 geodata-loader: memconservative
+geodata-mode: true
 geo-auto-update: true
 geo-update-interval: 24
 keep-alive-interval: 60
@@ -35,6 +36,7 @@ geox-url:
   geoip: "https://mirror.ghproxy.com/https://github.com/MetaCubeX/meta-rules-dat/releases/download/latest/geoip.dat"
   geosite: "https://mirror.ghproxy.com/https://github.com/MetaCubeX/meta-rules-dat/releases/download/latest/geosite.dat"
   mmdb: "https://mirror.ghproxy.com/https://github.com/MetaCubeX/meta-rules-dat/releases/download/latest/country.mmdb"
+  asn: "https://github.com/xishang0128/geoip/releases/download/latest/GeoLite2-ASN.mmdb"
 tun:
   enable: true
   stack: mixed # system gvisor mixed
@@ -158,6 +160,7 @@ dns:
   use-system-hosts: true
   ipv6: true
   prefer-h3: true
+  respect-rules: true
   listen: 0.0.0.0:53
   enhanced-mode: fake-ip # fake-ip or redir-host
   fake-ip-range: 28.0.0.1/8
@@ -176,26 +179,29 @@ dns:
     "geosite:cn,tld-cn,category-games@cn,apple-cn,apple,microsoft@cn,onedrive": 
       - https://223.5.5.5/dns-query#h3=true
       - https://1.12.12.12/dns-query
-    "rule-set:google,gfw,proxy,proxyclassical,global":
-      - https://dns.google/dns-query#h3=true&ecs=120.76.0.0/14&ecs-override=true
+    "rule-set:github,google,gfw,proxy,tiktok,openai,proxyclassical,global":
+      - https://dns.google/dns-query#ecs=120.76.0.0/14&ecs-override=true
       - https://dns12.quad9.net/dns-query#ecs=120.76.0.0/14&ecs-override=true
       - https://doh.apad.pro/dns-query#ecs=120.76.0.0/14&ecs-override=true
-    "geosite:github,facebook,twitter,tiktok,openai":
-      - https://dns.google/dns-query#h3=true&ecs=120.76.0.0/14&ecs-override=true
+    "geosite:github,google,facebook,twitter,tiktok,openai":
+      - https://dns.google/dns-query#ecs=120.76.0.0/14&ecs-override=true
       - https://dns12.quad9.net/dns-query#ecs=120.76.0.0/14&ecs-override=true
       - https://doh.apad.pro/dns-query#ecs=120.76.0.0/14&ecs-override=true
   proxy-server-nameserver: 
-      - https://dns.google/dns-query#h3=true&ecs=120.76.0.0/14&ecs-override=true
+      - https://dns.google/dns-query#ecs=120.76.0.0/14&ecs-override=true
       - https://dns12.quad9.net/dns-query#ecs=120.76.0.0/14&ecs-override=true
       - https://doh.apad.pro/dns-query#ecs=120.76.0.0/14&ecs-override=true
   nameserver: 
-    - https://223.5.5.5/dns-query#h3=true&ecs=120.76.0.0/14&ecs-override=true
+    - https://223.5.5.5/dns-query#h3=true
     - https://1.12.12.12/dns-query
+  fake-ip-filter-mode: blacklist
   fake-ip-filter:
     - "+.*"
 
 sniffer:
   enable: true
+  parse-pure-ip: true
+  force-dns-mapping: true
   sniff:
     HTTP:
       ports: [80, 8080-8880]
