--- a/GeneralClashConfig_lohome_meta_mac.yaml
+++ b/GeneralClashConfig_lohome_meta_mac.yaml
@@ -25,6 +25,7 @@ unified-delay: true
 tcp-concurrent: true
 global-client-fingerprint: chrome
 geodata-loader: standard
+geodata-mode: true
 geo-auto-update: true
 geo-update-interval: 24
 keep-alive-interval: 15
@@ -32,6 +33,7 @@ geox-url:
   geoip: "https://mirror.ghproxy.com/https://github.com/MetaCubeX/meta-rules-dat/releases/download/latest/geoip.dat"
   geosite: "https://mirror.ghproxy.com/https://github.com/MetaCubeX/meta-rules-dat/releases/download/latest/geosite.dat"
   mmdb: "https://mirror.ghproxy.com/https://github.com/MetaCubeX/meta-rules-dat/releases/download/latest/country.mmdb"
+  asn: "https://github.com/xishang0128/geoip/releases/download/latest/GeoLite2-ASN.mmdb"
 tun:
   enable: true
   stack: gvisor # system gvisor mixed
@@ -96,6 +98,7 @@ dns:
   use-system-hosts: true
   ipv6: false
   prefer-h3: true
+  respect-rules: true
   listen: 0.0.0.0:53
   enhanced-mode: fake-ip # fake-ip or redir-host
   fake-ip-range: 28.0.0.1/8
@@ -114,26 +117,29 @@ dns:
     "geosite:cn,tld-cn,category-games@cn,apple-cn,apple,microsoft@cn,onedrive": 
       - https://223.5.5.5/dns-query#h3=true
       - https://1.12.12.12/dns-query
-    "rule-set:google,gfw,proxy,proxyclassical,global":
-      - https://dns.google/dns-query#h3=true&ecs=120.76.0.0/14&ecs-override=true
+    "rule-set:github,google,gfw,proxy,tiktok,openai,proxyclassical,global":
+      - https://dns.google/dns-query#ecs=120.76.0.0/14&ecs-override=true
       - https://dns12.quad9.net/dns-query#ecs=120.76.0.0/14&ecs-override=true
       - https://doh.apad.pro/dns-query#ecs=120.76.0.0/14&ecs-override=true
-    "geosite:github,facebook,twitter,tiktok,openai":
-      - https://dns.google/dns-query#h3=true&ecs=120.76.0.0/14&ecs-override=true
+    "geosite:github,google,facebook,twitter,tiktok,openai":
+      - https://dns.google/dns-query#ecs=120.76.0.0/14&ecs-override=true
       - https://dns12.quad9.net/dns-query#ecs=120.76.0.0/14&ecs-override=true
       - https://doh.apad.pro/dns-query#ecs=120.76.0.0/14&ecs-override=true
   proxy-server-nameserver: 
-      - https://dns.google/dns-query#h3=true&ecs=120.76.0.0/14&ecs-override=true
+      - https://dns.google/dns-query#ecs=120.76.0.0/14&ecs-override=true
       - https://dns12.quad9.net/dns-query#ecs=120.76.0.0/14&ecs-override=true
       - https://doh.apad.pro/dns-query#ecs=120.76.0.0/14&ecs-override=true
   nameserver: 
-    - https://223.5.5.5/dns-query#h3=true&ecs=120.76.0.0/14&ecs-override=true
+    - https://223.5.5.5/dns-query#h3=true
     - https://1.12.12.12/dns-query
+  fake-ip-filter-mode: blacklist
   fake-ip-filter:
     - "+.*"
 
 sniffer:
   enable: true
+  parse-pure-ip: true
+  force-dns-mapping: true
   sniff:
     HTTP:
       ports: [80, 8080-8880]
