--- a/GeneralClashConfig_lohome_meta.yaml
+++ b/GeneralClashConfig_lohome_meta.yaml
@@ -59,7 +59,7 @@ dns:
     "+.lohome.top,+.syncthing.net,+.zerotier.net":
       - https://223.5.5.5/dns-query#h3=true
       - https://1.12.12.12/dns-query
-    "rule-set:direct,china,chinax,chinatest": 
+    "rule-set:direct,mydirect,china,chinax,chinatest": 
       - https://223.5.5.5/dns-query#h3=true
       - https://1.12.12.12/dns-query
     "geosite:tracker,private":
@@ -71,15 +71,11 @@ dns:
     "rule-set:github,google,gfw,proxy,tiktok,openai,proxyclassical,global":
       - https://dns.google/dns-query#ecs=120.76.0.0/14&ecs-override=true
       - https://dns12.quad9.net/dns-query#ecs=120.76.0.0/14&ecs-override=true
-      - https://doh.apad.pro/dns-query#ecs=120.76.0.0/14&ecs-override=true
     "geosite:github,google,facebook,twitter,tiktok,openai":
       - https://dns.google/dns-query#ecs=120.76.0.0/14&ecs-override=true
       - https://dns12.quad9.net/dns-query#ecs=120.76.0.0/14&ecs-override=true
-      - https://doh.apad.pro/dns-query#ecs=120.76.0.0/14&ecs-override=true
   proxy-server-nameserver: 
-      - https://dns.google/dns-query#ecs=120.76.0.0/14&ecs-override=true
-      - https://dns12.quad9.net/dns-query#ecs=120.76.0.0/14&ecs-override=true
-      - https://doh.apad.pro/dns-query#ecs=120.76.0.0/14&ecs-override=true
+      - https://223.5.5.5/dns-query#h3=true
   nameserver: 
     - https://223.5.5.5/dns-query#h3=true
     - https://1.12.12.12/dns-query
@@ -87,137 +83,26 @@ dns:
   fake-ip-filter:
     - "WORKGROUP"
     - "rule-set:direct"
+    - "rule-set:mydirect"
     - "rule-set:china"
     - "rule-set:chinax"
     - "rule-set:chinatest"
+    - "rule-set:private"
+    - "geosite:private"
     - "geosite:cn"
     - "geosite:tld-cn"
     - "geosite:tracker"
+    - "rule-set:apple"
+    - "rule-set:icloud"
+    - "rule-set:appleall"
     - "+.cn"
-    - "+.apple.com"
-    - "+.synology.me"
-    - "+.synology.com"
-    - "+.lohome.top"
-    - "+.syncthing.net"
-    - "+.zerotier.com"
-    - "+.myaddr.tools"
-    - "+.ddnsfree.com"
-    - "+.newlink.com"
-    - "+.newlinks.com"
-    - "+.shylwlkj.com"
-    - "+.nlsaas.com"
-    - "+.nlktj.cn"
-    - "+.lingnengsaas.com"
-    - "+.unicornenergy.cn"
-    - "+.czb365.com"
-    - "+.tencentcdb.com"
-    - "+.dnsapi.cn"
-    - "+.10010.com"
     - "+.lan"
-    - "+.oray.net"
-    - "+.localdomain"
-    - "+.example"
-    - "+.invalid"
-    - "+.localhost"
-    - "+.test"
-    - "+.local"
-    - "+.home.arpa"
-    - time.*.com
-    - time.*.gov
-    - time.*.edu.cn
-    - time.*.apple.com
-    - time1.*.com
-    - time2.*.com
-    - time3.*.com
-    - time4.*.com
-    - time5.*.com
-    - time6.*.com
-    - time7.*.com
-    - ntp.*.com
-    - ntp1.*.com
-    - ntp2.*.com
-    - ntp3.*.com
-    - ntp4.*.com
-    - ntp5.*.com
-    - ntp6.*.com
-    - ntp7.*.com
-    - "*.time.edu.cn"
-    - "*.ntp.org.cn"
-    - "+.pool.ntp.org"
-    - time1.cloud.tencent.com
-    - music.163.com
-    - "*.music.163.com"
-    - "*.126.net"
-    - musicapi.taihe.com
-    - music.taihe.com
-    - songsearch.kugou.com
-    - trackercdn.kugou.com
-    - "*.kuwo.cn"
-    - api-jooxtt.sanook.com
-    - api.joox.com
-    - joox.com
-    - y.qq.com
-    - "*.y.qq.com"
-    - streamoc.music.tc.qq.com
-    - mobileoc.music.tc.qq.com
-    - isure.stream.qqmusic.qq.com
-    - dl.stream.qqmusic.qq.com
-    - aqqmusic.tc.qq.com
-    - amobile.music.tc.qq.com
-    - "*.xiami.com"
-    - "*.music.migu.cn"
-    - music.migu.cn
-    - "+.msftconnecttest.com"
-    - "+.msftncsi.com"
-    - msftconnecttest.com
-    - msftncsi.com
-    - localhost.ptlogin2.qq.com
-    - localhost.sec.qq.com
-    - "+.srv.nintendo.net"
-    - "*.n.n.srv.nintendo.net"
-    - "+.stun.playstation.net"
-    - xbox.*.*.microsoft.com
-    - "*.*.xboxlive.com"
-    - xbox.*.microsoft.com
-    - xnotify.xboxlive.com
-    - "+.battlenet.com.cn"
-    - "+.wotgame.cn"
-    - "+.wggames.cn"
-    - "+.wowsgame.cn"
-    - "+.wargaming.net"
-    - proxy.golang.org
     - stun.*.*
     - stun.*.*.*
     - "+.stun.*.*"
     - "+.stun.*.*.*"
     - "+.stun.*.*.*.*"
     - "+.stun.*.*.*.*.*"
-    - heartbeat.belkin.com
-    - "*.linksys.com"
-    - "*.linksyssmartwifi.com"
-    - "+.router.asus.com"
-    - "+.google.com"
-    - "+.google.cn"
-    - "+.googleapis.com"
-    - "+.googleapis.cn"
-    - "+.nflxvideo.net"
-    - "*.square-enix.com"
-    - "*.finalfantasyxiv.com"
-    - "*.ffxiv.com"
-    - "*.ff14.sdo.com"
-    - ff.dorado.sdo.com
-    - "*.mcdn.bilivideo.cn"
-    - "+.media.dssott.com"
-    - shark007.net
-    - '*.mcdn.bilivideo.cn'
-    - "+.media.dssott.com"
-    - '*.mcdn.bilivideo.cn'
-    - +.media.dssott.com
-    - +.cmbchina.com
-    - +.cmbimg.com
-    - local.adguard.org
-    - +.sandai.net
-    - +.n0808.com
 
 sniffer:
   enable: true
@@ -243,6 +128,13 @@ rule-providers:
     url: "https://cdn.jsdelivr.net/gh/Loyalsoldier/clash-rules@release/reject.txt"
     path: ./ruleset/reject.yaml
     interval: 86400
+
+  mydirect:
+    type: http
+    behavior: classical
+    url: "https://raw.githubusercontent.com/CuminLo/clash-rules/master/DirectDomain.list"
+    path: ./ruleset/mydirect.yaml
+    interval: 1000
 
   myproxy:
     type: http
