--- a/GeneralClashConfig_lohome_meta_android.yaml
+++ b/GeneralClashConfig_lohome_meta_android.yaml
@@ -170,7 +170,7 @@ dns:
     "+.lohome.top,+.syncthing.net,+.zerotier.net":
       - https://223.5.5.5/dns-query#h3=true
       - https://1.12.12.12/dns-query
-    "rule-set:direct,china,chinax,chinatest": 
+    "rule-set:direct,mydirect,china,chinax,chinatest": 
       - https://223.5.5.5/dns-query#h3=true
       - https://1.12.12.12/dns-query
     "geosite:tracker,private":
@@ -182,15 +182,11 @@ dns:
     "rule-set:github,google,gfw,proxy,tiktok,openai,proxyclassical,global":
       - https://dns.google/dns-query#ecs=120.76.0.0/14&ecs-override=true
       - https://dns12.quad9.net/dns-query#ecs=120.76.0.0/14&ecs-override=true
-      - https://doh.apad.pro/dns-query#ecs=120.76.0.0/14&ecs-override=true
     "geosite:github,google,facebook,twitter,tiktok,openai":
       - https://dns.google/dns-query#ecs=120.76.0.0/14&ecs-override=true
       - https://dns12.quad9.net/dns-query#ecs=120.76.0.0/14&ecs-override=true
-      - https://doh.apad.pro/dns-query#ecs=120.76.0.0/14&ecs-override=true
   proxy-server-nameserver: 
-      - https://dns.google/dns-query#ecs=120.76.0.0/14&ecs-override=true
-      - https://dns12.quad9.net/dns-query#ecs=120.76.0.0/14&ecs-override=true
-      - https://doh.apad.pro/dns-query#ecs=120.76.0.0/14&ecs-override=true
+      - https://223.5.5.5/dns-query#h3=true
   nameserver: 
     - https://223.5.5.5/dns-query#h3=true
     - https://1.12.12.12/dns-query
@@ -222,6 +218,13 @@ rule-providers:
     url: "https://cdn.jsdelivr.net/gh/Loyalsoldier/clash-rules@release/reject.txt"
     path: ./ruleset/reject.yaml
     interval: 86400
+
+  mydirect:
+    type: http
+    behavior: classical
+    url: "https://raw.githubusercontent.com/CuminLo/clash-rules/master/DirectDomain.list"
+    path: ./ruleset/mydirect.yaml
+    interval: 1000
 
   myproxy:
     type: http
